# somop

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: CPRD2.yaml  bhf_acs_pci.yaml  cardiometabolic_risk.yaml  ckd_antibodies.yaml  ckd_antibodies_v2.yaml  conditions.yaml  massive_dataset.yaml  more_symptoms.yaml  mortality_conditions.yaml  multi_example.yaml  respiratory_asthma_copd.yaml  simple.yaml  symptoms.yaml  uk_t2d_primary_care.yaml  wide_dataset.yaml
docker/: run-bunny.yaml  synthetic-omop.yaml
docker/init-db/: init-multiple-dbs.sql
somop/: __init__.py  cli.py  compose.py  config.py  dist.py  generate.py  utils.py
somop/omop/v5_4_3/: __init__.py  condition_occurrence.py  death.py  drug_exposure.py  location.py  measurement.py  observation.py  person.py  procedure_occurrence.py  specimen.py
