
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somop"
version = "0.1.0"
description = "Generate OMOP-like mock data from the command line."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Calum Macdonald"}]
dependencies = [
    "click>=8.3",
    "numpy>=2.3",
    "pandas>=2.3",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.scripts]
somop = "somop.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["somop"]
include-package-data = true
